# jupyter-utils

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.sh
.claude/skills/nb-utils/: SKILL.md
src/nb_utils/: __init__.py  cache.py  config.py  options.py  query.py  report.py  sql.py
src/nb_utils/bigquery/: __init__.py  auth.py  client.py
src/nb_utils/jupyter/: __init__.py  enable.py  magics.py
src/nb_utils/redshift/: __init__.py  client.py
src/nb_utils/tableau/: client.py
tests/: test_cache.py  test_options.py  test_query.py  test_report.py  test_sql.py
